# diddukewin_v3

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Procfile  cubs.html  docker-compose.yml  evaluator.py  fetcher.py  models.py  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  score.html  template.yaml
.circleci/: config.yml
ddw/: app.py  aws.py  bluesky.py  caching.py  celeryconfig.py  clock.py  config.py  evaluator.py  exceptions.py  mastodon.py  models.py  parser.py  redis.py  renderer.py  tasks.py  twitter.py  uploader.py
ddw/data/api_basketball/: constants.py  evaluator.py  fetcher.py  models.py
ddw/data/espn/: evaluator.py  models.py  parser.py
ddw/data/goduke/: evaluator.py  fetcher.py  models.py
ddw/data/ncaa/: NCAAGame.py  evaluator.py  fetcher.py
ddw/static_files/: error.html  style.css  style.min.css
ddw/templates/: index.html
k8s/: cron.yaml
tests/: conftest.py  test_app.py  test_caching.py  test_evaluator.py  test_models.py  test_parser.py  test_renderer.py  test_twitter.py  test_uploader.py
tests/data/api_basketball/: test_fetcher.py
tests/data/espn/: test_evaluator.py  test_game.py  test_parser.py
tests/data/goduke/: test_evaluator.py
tests/data/ncaa/: test_evaluator.py  test_fetcher.py
tests/html/: mets.html
tests/models/: test_game_display.py  test_tweet.py
tests/test_data/: cubs.html  goduke_schedule.txt  ncaa_in_progress.json  ncaa_loss.json  ncaa_new.json  ncaa_no_game.json  ncaa_pregame.json  ncaa_win.json  rendered.html  score_simplified.html
