[project]
name = "diddukewin"
version = "0.1.0"
requires-python = "==3.11.4"
dependencies = [
    "requests==2.32.4",
    "Jinja2==3.1.6",
    "htmlmin==0.1.12",
    "boto3==1.17.2",
    "python-twitter==3.5",
    "sentry-sdk==2.18.0",
    "atproto==0.0.55",
]

[dependency-groups]
dev = [
    "ipython==8.13.2",
    "pytest==7.4.0",
    "pre-commit==2.9.2",
    "pytest-mock==1.10.4",
    "pytest-cov==2.7.1",
    "pytest-socket==0.3.5",
    "types-requests==2.31.0",
]
lint = [
    "black==23.1.0",
    "mypy==1.5.1",
    "types-requests==2.31.0",
]

[tool.uv]
package = false
