[project]
name = "diddukewin"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "requests==2.33.0",
    "Jinja2==3.1.6",
    "minify-html==0.18.1",
    "boto3==1.42.89",
    "python-twitter==3.5",
    "sentry-sdk==2.18.0",
    "atproto==0.0.55",
]

[dependency-groups]
dev = [
    "ipython==8.13.2",
    "pytest==9.0.3",
    "pre-commit==2.9.2",
    "pytest-mock==1.10.4",
    "pytest-cov==2.7.1",
    "pytest-socket==0.3.5",
    "types-requests==2.31.0",
]
lint = [
    "black==23.1.0",
    "ty==0.0.22",
    "types-requests==2.31.0",
]

[tool.uv]
package = false
